--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,8 @@ a:link, a:visited {
     background-color: white;
     color: black;
     border: 2px solid green;
-    width: 80%;
-    margin: 0px 0 10px 10%;
-    padding: 05px;
+    padding: 5px;
+    margin: 2px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
